# SAVI

./: SAVI.code-workspace  pyproject.toml
Parte01/: main.py
Parte02/: wally.py
Parte02/Aula/: ex1.py  ex2.py  ex3.py  main.py
Parte3/: contador_veiculos.py  find_coordenates.py
