[tool.poetry]
name = "savi"
version = "0.1.0"
description = ""
authors = ["GoncaloR00 <gribeiro@ua.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
opencv-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
